<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    <Button
	        android:id="@+id/yes_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:background="@color/palepink_button"
	        android:text="@string/yes" />
		
	    <Button
	        android:id="@+id/no_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:background="@color/palepink_button"
	        android:text="@string/no" />
	</LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	      <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"     
            android:layout_height="60dp"
            android:layout_weight="200"
            android:drawableRight="@android:drawable/ic_menu_save"
            android:text="@string/save"
            android:onClick="savePhrase"   
            android:background="@color/usual_button"/>
	</LinearLayout>
	
    <GridLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3" >
        
        <Button
	    	android:id="@+id/hi_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_height="60dp"
	        android:layout_column="0"
	        android:layout_rowSpan="1"
	        android:layout_row="0"
	        android:minEms="5"
	        android:layout_gravity="fill|center"
	        android:text="@string/hi"
	        android:background="@color/palepink_button"/>
	
        <Button
            android:id="@+id/tal_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="60dp"
            android:layout_column="1"
            android:minEms="5"
	        android:layout_row="0"
	        android:layout_rowSpan="1"
            android:layout_gravity="fill|center"
            android:text="@string/tal"
            android:background="@color/palepink_button"/>
        
        <Button
 	  	    android:id="@+id/speak_button"
 	  	    style="?android:attr/buttonBarButtonStyle"
 	  	    android:layout_column="2"
 	  	    android:layout_row="0"
 	  	    android:layout_rowSpan="3"
 	  	    android:layout_gravity="fill"
 	  	    android:drawableBottom="@android:drawable/ic_lock_silent_mode_off"
 	        android:text="@string/speak" 
 	        android:background="@color/speak_button"/>
        

        
        <Button
           	android:id="@+id/fine_button"
           	style="?android:attr/buttonBarButtonStyle"
           	android:layout_height="60dp"
          	android:layout_column="0"
	        android:layout_row="1"
	        android:layout_rowSpan="1"
            android:layout_gravity="fill|center"
           	android:text="@string/fine" 
           	android:background="@color/palepink_button"/>

	 	<Button
	 	    android:id="@+id/thanks_button"
	 	    style="?android:attr/buttonBarButtonStyle"
	 	    android:layout_height="60dp"
	 	    android:layout_column="1"
	        android:layout_row="1"
	        android:layout_rowSpan="1"
            android:layout_gravity="fill|center"
	 	    android:background="@color/palepink_button"
	 	    android:text="@string/thanks" />
	 	
	 	<Button
         	android:id="@+id/please_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_height="60dp"
	        android:layout_column="1"
	        android:layout_row="2"
	        android:layout_rowSpan="1"
            android:layout_gravity="fill|center"
	        android:background="@color/palepink_button"
	        android:text="@string/please" />
	 	
	 	<Button
            android:id="@+id/sorry_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_height="60dp"
	        android:layout_column="0"
	        android:layout_row="2"
	        android:layout_rowSpan="1"
            android:layout_gravity="fill|center"
	        android:background="@color/palepink_button"
	        android:text="@string/sorry" />
	 	
    </GridLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    <Button
	        android:id="@+id/ok_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:background="@color/palepink_button"
	        android:text="@string/ok" />
		
	    <Button
	        android:id="@+id/maybe_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:background="@color/palepink_button"
	        android:text="@string/maybe" />
	     <Button
	        android:id="@+id/care_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:background="@color/palepink_button"
	        android:text="@string/care" />
	</LinearLayout>
</LinearLayout>